src/test/ui/enum/enum-in-scope.rs
struct hello(isize);

fn main() {
    let hello = 0; //~ERROR let bindings cannot shadow tuple structs
}
